[gd_scene load_steps=44 format=3 uid="uid://c8wlql1bvmeme"]

[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/online_player.gd" id="1_rowoy"]
[ext_resource type="FontFile" uid="uid://b3wau748jika8" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_vchyc"]
[ext_resource type="Texture2D" uid="uid://c43lp1lg2c6ss" path="res://assets/sprites/dinos/dinos.png" id="3_ah1yj"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_state_machine.gd" id="4_38qgk"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_attack.gd" id="5_e1sf1"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_hurt.gd" id="6_2ybgp"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_crouch.gd" id="7_u0w0b"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_idle.gd" id="8_5xiug"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_run.gd" id="9_p52uu"]
[ext_resource type="AudioStream" uid="uid://cfv6uqb72ghdf" path="res://assets/sfx/dirt_run.wav" id="10_6d8dn"]
[ext_resource type="AudioStream" uid="uid://dcutcy4024dpe" path="res://assets/sfx/dirt_walk.wav" id="10_7e68j"]
[ext_resource type="Script" path="res://scripts/online_multiplayer/online_player/state_machine/online_player_walk.gd" id="10_uu13k"]
[ext_resource type="AudioStream" uid="uid://dwitw6kmwci8u" path="res://assets/sfx/rawr.wav" id="12_1blgv"]

[sub_resource type="Theme" id="Theme_tw71y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g3vjy"]
atlas = ExtResource("3_ah1yj")
region = Rect2(240, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq3dl"]
atlas = ExtResource("3_ah1yj")
region = Rect2(264, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd3ba"]
atlas = ExtResource("3_ah1yj")
region = Rect2(288, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yat7b"]
atlas = ExtResource("3_ah1yj")
region = Rect2(312, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqa3x"]
atlas = ExtResource("3_ah1yj")
region = Rect2(360, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4v6m"]
atlas = ExtResource("3_ah1yj")
region = Rect2(384, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_35j50"]
atlas = ExtResource("3_ah1yj")
region = Rect2(408, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2xvi"]
atlas = ExtResource("3_ah1yj")
region = Rect2(432, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_olxku"]
atlas = ExtResource("3_ah1yj")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pyep"]
atlas = ExtResource("3_ah1yj")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3jry"]
atlas = ExtResource("3_ah1yj")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2rj0"]
atlas = ExtResource("3_ah1yj")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xrvn"]
atlas = ExtResource("3_ah1yj")
region = Rect2(312, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn82y"]
atlas = ExtResource("3_ah1yj")
region = Rect2(336, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_327ve"]
atlas = ExtResource("3_ah1yj")
region = Rect2(480, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r25e7"]
atlas = ExtResource("3_ah1yj")
region = Rect2(504, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue4ao"]
atlas = ExtResource("3_ah1yj")
region = Rect2(528, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3co7h"]
atlas = ExtResource("3_ah1yj")
region = Rect2(552, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c61q8"]
atlas = ExtResource("3_ah1yj")
region = Rect2(576, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xadvc"]
atlas = ExtResource("3_ah1yj")
region = Rect2(600, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj1ks"]
atlas = ExtResource("3_ah1yj")
region = Rect2(96, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksqro"]
atlas = ExtResource("3_ah1yj")
region = Rect2(120, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fks2"]
atlas = ExtResource("3_ah1yj")
region = Rect2(144, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl82e"]
atlas = ExtResource("3_ah1yj")
region = Rect2(168, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnabx"]
atlas = ExtResource("3_ah1yj")
region = Rect2(192, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqp1b"]
atlas = ExtResource("3_ah1yj")
region = Rect2(216, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_n0sh2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3vjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq3dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd3ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yat7b")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqa3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4v6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35j50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2xvi")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olxku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pyep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3jry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2rj0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xrvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn82y")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_327ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r25e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue4ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3co7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c61q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xadvc")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj1ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksqro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fks2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl82e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnabx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqp1b")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p00in"]
radius = 6.0
height = 16.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4g34u"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimatedSprite2D:flip_h")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("AnimatedSprite2D:animation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_rowoy")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -26.0
offset_top = -38.0
offset_right = 32.0
offset_bottom = -15.0
theme = SubResource("Theme_tw71y")
theme_override_fonts/font = ExtResource("2_vchyc")
theme_override_font_sizes/font_size = 8
text = "PLAYER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -9)
sprite_frames = SubResource("SpriteFrames_n0sh2")
animation = &"run"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_p00in")

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("4_38qgk")

[node name="Attack" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_e1sf1")

[node name="Hurt" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_2ybgp")

[node name="Crouch" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_u0w0b")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_5xiug")

[node name="Run" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_p52uu")

[node name="Walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_uu13k")

[node name="Sfx_Run" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_6d8dn")
volume_db = -12.0

[node name="Sfx_Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_7e68j")
volume_db = -12.0

[node name="Sfx_Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_1blgv")
volume_db = -5.0
pitch_scale = 0.6

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4g34u")
